--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<style>
+.main{
+    width: 300px;
+    padding: 30px;
+    text-align: center;
+    background-color: rgb(199, 178, 178);
+    box-shadow:10px 10px 15px gray;
+    border-radius: 10px;
+}
+#btn1{
+    padding: 10px;
+    background-color: tomato;
+    color: white;
+    border-radius: 10px;
+}
+
+
+
+
+</style>
+
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="main">
 
+<img src="https://png.pngtree.com/thumb_back/fw800/background/20231226/pngtree-wedding-invitation-card-design-image_15561144.jpg" width="150"  alt="">
+<h1>Pricing Card</h1>
+<p>price:Rs.200</p>
+<p>Description:Lorem</p>
+<p>ipsum dolar sit amet,</p>
+<p>consectetur adipscing</p>
+<p>elite</p>
+
+<div class="btn">
+<input  id="btn1"  type="button" value="Buy Now">
+
+    </div>
+</div>
+
+    
 </body>
-
 </html>
