--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 <p>consectetur adipscing</p>
 <p>elite</p>
 
-<div class="btn">
+<div class="button">
 <input  id="btn1"  type="button" value="Buy Now">
 
     </div>
