--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
-.main{
+.container{
     width: 300px;
     padding: 30px;
     text-align: center;
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-    <div class="main">
+    <div class="container">
 
 <img src="https://png.pngtree.com/thumb_back/fw800/background/20231226/pngtree-wedding-invitation-card-design-image_15561144.jpg" width="150"  alt="">
 <h1>Pricing Card</h1>
