--- a/main.html
+++ b/main.html
@@ -13,11 +13,12 @@
     box-shadow:10px 10px 15px gray;
     border-radius: 10px;
 }
-#btn1{
+#button{
     padding: 10px;
     background-color: tomato;
     color: white;
     border-radius: 10px;
+    text-align: center;
 }
 
 
@@ -37,8 +38,8 @@
 <p>consectetur adipscing</p>
 <p>elite</p>
 
-<div class="button">
-<input  id="btn1"  type="button" value="Buy Now">
+<div class="btn">
+<input  id="button"  type="btn" value="Buy Now">
 
     </div>
 </div>
