--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     box-shadow:10px 10px 15px gray;
     border-radius: 10px;
 }
-#button{
+.button{
     padding: 10px;
     background-color: tomato;
     color: white;
@@ -39,7 +39,7 @@
 <p>elite</p>
 
 <div class="btn">
-<input  id="button"  type="btn" value="Buy Now">
+<input  class="button"  type="btn" value="Buy Now">
 
     </div>
 </div>
