--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     box-shadow:10px 10px 15px gray;
     border-radius: 10px;
 }
-.button{
+button{
     padding: 10px;
     background-color: tomato;
     color: white;
@@ -38,10 +38,7 @@
 <p>consectetur adipscing</p>
 <p>elite</p>
 
-<div class="btn">
-<input  class="button"  type="btn" value="Buy Now">
-
-    </div>
+<button>Buy now</button>
 </div>
 
     
